[project]
name = "python-examples"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wwfyde", email = "wwfyde@163.com" }
]
dependencies = [
    "pip>=24.2",
    "fastapi[all]>=0.114.1",
    "openai>=1.44.1",
    "redis>=5.0.8",
    "tenacity>=9.0.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "ipython>=8.27.0",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "numpy>=2.1.1",
    "datasets>=3.0.0",
    "notebook>=7.2.2",
    "polars>=1.9.0",
    "bokeh>=3.6.0",
    "altair>=5.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"python-examples" = "python_examples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.27.0",
    "ipywidgets>=8.1.5",
    "notebook>=7.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_examples"]
