[project]
name = "python-examples"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wwfyde", email = "wwfyde@163.com" }
]
dependencies = [
    "pip>=24.2",
    "fastapi[all]>=0.114.1",
    "openai>=1.78.0",
    "redis>=5.0.8",
    "tenacity>=9.0.0",
    "ipython>=8.27.0",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "numpy>=2.1.1",
    "datasets>=3.0.0",
    "notebook>=7.2.2",
    "polars>=1.9.0",
    "bokeh>=3.6.0",
    "altair>=5.4.1",
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
    "nacos-sdk-python>=1.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"python-examples" = "python_examples:main"

[project.optional-dependencies]
standard = [
    "orjson>=3.10.12",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "notebook>=7.3.2",
    "pip>=24.3.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
pytorch = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]


[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "ipython>=8.27.0",
    "ipywidgets>=8.1.5",
    "notebook>=7.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "src/python_examples",
    "config",
    "recipes",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/python_examples",
    "config",
    "recipes",
    "packages/demo"
]

